# UnknownTwitchGame

./: .clang-format  CMakeLists.txt
.github/workflows/: standalone.yml
all/: CMakeLists.txt
documentation/: CMakeLists.txt
include/greeter/: greeter.h
include/irc/: IRCClient.h  IRCHandler.h  IRCSocket.h
source/: greeter.cpp
source/irc/: IRCClient.cpp  IRCHandler.cpp  IRCSocket.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
